# deep-learning-system

./: .gitmodules  pyproject.toml
hw0/: Makefile
hw0/src/: simple_ml.py  simple_ml_ext.cpp
hw1/: hw1.ipynb
hw1/apps/: simple_ml.py
hw1/python/needle/: autograd.py
hw1/python/needle/ops/: ops_mathematic.py
hw1/tests/hw1/: test_autograd_hw.py
