[project]
name = "deep-learning-systems"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyterlab>=4.4.3",
    "numdifftools>=0.9.41",
    "numpy>=2.2.6",
    "pip>=25.1.1",
    "pybind11>=2.13.6",
    "pytest>=8.3.5",
    "requests>=2.32.3",
]
